--- a/html/Download.html
+++ b/html/Download.html
@@ -5,7 +5,7 @@
 
 <style>
 body {
-    background-image: url("images/AwesomeWallpaper.jpg");
+    background-image: url("../images/AwesomeWallpaper.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -25,8 +25,8 @@ body {
             Step 1: Click the blue download button <br>
             Step 2: Enjoy <br>
 
-            <a href="videos/examplefile.mp4" download>
-                <img src="images/DownloadButton.png"> 
+            <a href="../videos/examplefile.mp4" download>
+                <img src="../images/DownloadButton.png"> 
         </a>
     </div>
 </body>
