--- a/html/FAQ.html
+++ b/html/FAQ.html
@@ -5,7 +5,7 @@
 
 <style>
 body {
-    background-image: url("images/AwesomeWallpaper.jpg");
+    background-image: url("../images/AwesomeWallpaper.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
 }
