Added smooth scrolling

--- a/html/index.html
+++ b/html/index.html
@@ -3,23 +3,63 @@
 <head>
   <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body id = "page-top">
 
 <div class="grid-container">
-  <div class="header"> <h2> NO HOMEWORK! </h2> </div>
-  <div class="left">  <input type="button" onclick="location.href='CharacterSpecs.html';" value="Character Specs" /> <br> 
+  <div class="header"> 
+    <nav id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"><h2>NO HOMEWORK!</h2> </a>
+          <ul class="navbar-nav text-uppercase ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#breadtext">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#about">Download</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+          </ul>
+      </div>
+    </nav>
+  </div>
+  
+  <!-- Navigation -->
+  <div class = "left">
+
+  </div>
+
+  <!--
+  <div class="left">  
+    <input type="button" onclick="location.href='CharacterSpecs.html';" value="Character Specs" /> <br> 
     <input type="button" onclick="location.href='FAQ.html';" value="FAQ" /> <br>
     <input type="button" onclick="location.href='About.html';" value="About" /> <br>  
   </div>
+  -->
 
-  <div class="middle"> <p id = "breadtext"> This is the official webforum for the unrealesed game "NO HOMEWORK" <br><br>
-    We have created the company RatCat Entertainment where we develop a tower defense game. The theme of the game is something we believe is a great selling point and can appeal to many young people. <br><br>
-    No Homework is an action packed strategy game with intense moments where students protect their valuable leisure time from hard work. The player is sucked into the game world and places out other students on the playing field to destroy the lessons that teachers are carrying. There are a variety of towers to choose from, ranging from small eraser to the cool football guy that all girls want to access. In addition, there are a number of teachers who have different characteristics, it is both the boring physics teacher who comes with a high essay to the scary principal who calls in reinforcement of teachers when she loses her homework. <br><br>
-    BUT not only with the action packed adventure in your mobile, you can also send an invite to your best friend and bring him or her into the adventure. By collaborating on the playing field, you can build strategies that have never before been seen and cope with the enormously tough waves of teachers who come to destroy the day.<br></p></div>  
-  <div class="right">  <input type="button" onclick="location.href='Download.html';" value="Download Page" /> </div>
-  <footer> info </footer> 
-  
+<div class="middle"> 
+  <p id = "breadtext"> This is the official webforum for the unrealesed game "NO HOMEWORK" <br><br>
+      We have created the company RatCat Entertainment where we develop a tower defense game. The theme of the game is something we believe is a great selling point and can appeal to many young people. <br><br>
+      No Homework is an action packed strategy game with intense moments where students protect their valuable leisure time from hard work. The player is sucked into the game world and places out other students on the playing field to destroy the lessons that teachers are carrying. There are a variety of towers to choose from, ranging from small eraser to the cool football guy that all girls want to access. In addition, there are a number of teachers who have different characteristics, it is both the boring physics teacher who comes with a high essay to the scary principal who calls in reinforcement of teachers when she loses her homework. <br><br>
+      BUT not only with the action packed adventure in your mobile, you can also send an invite to your best friend and bring him or her into the adventure. By collaborating on the playing field, you can build strategies that have never before been seen and cope with the enormously tough waves of teachers who come to destroy the day.<br>
+  </p>
 </div>
+
+  <div class="right">  
+    <input type="button" onclick="location.href='Download.html';" value="Download Page" /> 
+  </div>
+
+  <footer> info </footer> 
+
+  <!-- core JavaScript -->
+  <script src="../javascript/Libraries/jquery.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="../javascript/Libraries/jquery.easing.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="../javascript/agency.js"></script>
 
 </body>
 </html>
