Link done for real now

--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
     If you're planning on playing with friends, the easiest option is to start a subscription to Homework Realms. You can also set up your own NoHomework server from home, though that's a bit trickier to do. There are also a bunch of online servers elsewhere on the internet. <br> <br>
 
     <div id="downloadImage"> 
-      <a href="https://drive.google.com/file/d/1TqH8REUX5Iss7Wev7ik1BlV3aJ0_TaSI/view?usp=sharing" download="NoHomework!">
+      <a href="https://drive.google.com/open?id=1rv_-U7_gD6-h_s6JHwICXaFWsitz7ttY" download="NoHomework!">
       <img src="../images/downloadOn.png" alt="download"/>
       </a>
     </div>
